refactoring metodi di ordinamento prodotto controller e dello strategyFactory